Set maxwdith on activity image. Try and fix false "watched" notifications when buffering takes too long on playback start.

--- a/data/interfaces/default/css/plexpy.css
+++ b/data/interfaces/default/css/plexpy.css
@@ -351,7 +351,7 @@ input[type="color"],
 }
 .dashboard-activity-poster-face {
 	height: 141px;
-	width: 250px;
+	max-width: 250px;
 	position: relative;
 	top: 0px;
 	background-color: rgba(255,255,255,.03);
